@@ -84,6 +84,7 @@ fi
 %attr(755,root,root) %prefix/bin/log4cpp-config
 %attr(755,root,root) %prefix/lib/lib*.so
 %attr(644,root,root) %prefix/lib/*.*a
+%attr(644,root,root) %prefix/lib/pkgconfig/log4cpp.pc
 %attr(644,root,root) %prefix/share/aclocal/*.m4
 
 %files doc
